--- a/JavaScript/Game/carrotGame/index.html
+++ b/JavaScript/Game/carrotGame/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/84834cdb87.js" crossorigin="anonymous"></script>
-  <script src="main.js" defer></script>
-  <title>Carrot Game</title>
-</head>
-<body>
-<section class="game">
-  <header class="game_header">
-    <button class="game_button">
-      <i class="fas fa-play"></i>
-    </button>
-    <span class="game_timer">0:0</span>
-    <span class="game_score">9</span>
-  </header>
-  <section class="game_field"></section>
-</section>
-<section class="pop-up pop-up-hide">
-  <button class="pop-up_refresh">
-    <i class="fas fa-redo"></i>
-  </button>
-  <span class="pop-up_message">Hello</span>
-</section>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Find Carrot</title>
+  <script src="https://kit.fontawesome.com/9eb162ac0d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
+</head>
+
+<body>
+  <section class="game">
+    <header>
+      <button class="game__button">
+        <i class="fas fa-play"></i>
+      </button>
+      <span class="game__timer"> 00:00 </span>
+      <span class="game__score">0</span>
+    </header>
+    <section class="game__field"></section>
+  </section>
+  <section class="pop-up pop-up--hide">
+    <header>
+      <button class="pop-up__refresh">
+        <i class="fas fa-redo"></i>
+      </button>
+      <span class="pop-up__message">You have WON!!!</span>
+    </header>
+  </section>
 </body>
+
 </html>
