--- a/JavaScript/Game/carrotGame/index.html
+++ b/JavaScript/Game/carrotGame/index.html
@@ -7,7 +7,7 @@
   <title>Find Carrot</title>
   <script src="https://kit.fontawesome.com/9eb162ac0d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
-  <script src="main.js" defer></script>
+  <script type="module" src="src/main.js" defer></script>
 </head>
 
 <body>
