--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,6 +18,314 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-  
+  <!-- Navbar -->
+  <nav id="navbar">
+    <div class="navbar__log">
+      <i class="fab fa-diaspora"></i>
+      <a href="#">YOOJIN</a>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item">About</li>
+      <li class="navbar__menu__item">Skill</li>
+      <li class="navbar__menu__item">My work</li>
+      <li class="navbar__menu__item">Testimnials</li>
+      <li class="navbar__menu__item">Contact</li>
+    </ul>
+  </nav>
+
+  <!-- Home -->
+  <section class="home">
+    <img 
+    src="imgs/Profile.jpeg" 
+    alt="yoojin's profile" 
+    class="home__avatar"
+    />
+    <h1 class="home__title">Hello,<br/>I am Yoojin</h1>
+    <h2 class="home__description">A FrontEnd Engineer</h2>
+    <button class="home__contact">Contact Me</button>
+  </section>
+
+  <!-- About -->
+  <section class="about">
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+      Esse ratione sunt, in repudiandae error enim est placeat natus illo
+       numquam odit tempore impedit eligendi ipsum facere, earum accusamus optio ipsa?
+    </p>
+    <div class="about__majors">
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fa-html5"></i>
+        </div>
+        <div class="major__title">Front-end</div>
+        <div class="major__description">HTML,CSS,JavaScript,React</div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fas fa-mobile-alt"></i>
+        </div>
+        <div class="major__title">Mobile</div>
+        <div class="major__description">React-Native</div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fas fa-ellipsis-h"></i>
+        </div>
+        <div class="major__title">Etc</div>
+        <div class="major__description">Git,Photoshop,Illustrator</div>
+      </div>
+    </div>
+    <div class="about__jobs">
+      <div class="job">
+        <img src="imgs/jobs/KNOU.jpeg" alt="KNOU" class="job__logo">
+        <p class="job__name">한국방송통신대학교</p>
+        <p class="job__period">2019 Mar - 2021 Feb</p>
+      </div>
+      <div class="job">
+        <img src="imgs/jobs/KNOU.jpeg" alt="KNOU" class="job__logo">
+        <p class="job__name">한국방송통신대학교</p>
+        <p class="job__period">2019 Mar - 2021 Feb</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section class="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet inventore, 
+      possimus accusantium doloremque tenetur exercitationem? Doloremque eius 
+      quisquam deserunt odit dolor esse tempora mollitia, laborum, nam dolore obcaecati nostrum totam.
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <div class="skill">
+          <div class="skill__description">
+            <span>HTML</span>
+            <span>90%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>CSS</span>
+            <span>80%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>JavaScript</span>
+            <span>70%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>React</span>
+            <span>30%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>React-Native</span>
+            <span>40%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Visual Studio Coode</span></li>
+            <li><span>Atom</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+            <li><span>Photoshop</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Work -->
+  <section id="work" class="section">
+    <div class="section__container">
+     <h1>My work</h1>
+     <h3>Projects</h3>
+     <div class="work__categories">
+       <button class="category__btn selected" data-filter="*">
+         All <span class="category__count">8</span>
+       </button>
+       <button class="category__btn" data-filter="front-end">
+         Front-end <span class="category__count">3</span>
+       </button>
+       <button class="category__btn" data-filter="back-end">
+         Back-end <span class="category__count">3</span>
+       </button>
+       <button class="category__btn" data-filter="mobile">
+         Mobile <span class="category__count">2</span>
+       </button>
+     </div>
+     <div class="work__projects">
+       <a href="" class="project" target="blank" data-type="front-end">
+         <img
+           src="imgs/projects/project1.png"
+           alt="Youtube"
+           class="project__img"
+         />
+         <div class="project__description">
+           <h3>Youtube Site</h3>
+           <span>Clone coding with HTML, CSS</span>
+         </div>
+       </a>
+       <a
+         href="https://github.com/yooj1n"
+         class="project"
+         data-type="front-end"
+         target="blank"
+       >
+         <img
+           class="project__img"
+           src="imgs/projects/project2.png"
+           alt="navbar"
+         />
+         <div class="project__description">
+           <h3>Responsive Navbar</h3>
+           <span>HTML, CSS with media query</span>
+         </div>
+       </a>
+       <a
+         href="https://github.com/yooj1n"
+         class="project"
+         data-type="front-end"
+         target="blank"
+       >
+         <img class="project__img" src="imgs/projects/project8.png" alt="navbar" />
+         <div class="project__description">
+           <h3>Shopping mall game</h3>
+           <span>HTML, CSS, JavaScript, Json</span>
+         </div>
+       </a>
+       <a href="https://github.com/yooj1n" class="project" data-type="back-end">
+         <img class="project__img" src="imgs/projects/project3.png" alt="" />
+         <div class="project__description">
+           <h3>Project</h3>
+           <span>Explanation</span>
+         </div>
+       </a>
+       <a href="https://github.com/yooj1n" class="project" data-type="back-end">
+         <img class="project__img" src="imgs/projects/project4.png" alt="" />
+         <div class="project__description">
+           <h3>Project</h3>
+           <span>Explanation</span>
+         </div>
+       </a>
+       <a href="https://github.com/yooj1n" class="project" data-type="mobile">
+         <img class="project__img" src="imgs/projects/project5.png" alt="" />
+         <div class="project__description">
+           <h3>Project</h3>
+           <span>Explanation</span>
+         </div>
+       </a>
+       <a href="https://github.com/yooj1n" class="project" data-type="mobile">
+         <img class="project__img" src="imgs/projects/project6.png" alt="" />
+         <div class="project__description">
+           <h3>Project</h3>
+           <span>Explanation</span>
+         </div>
+       </a>
+       <a href="https://github.com/yooj1n" class="project" data-type="mobile">
+         <img class="project__img" src="imgs/projects/project7.png" alt="" />
+         <div class="project__description">
+           <h3>Project</h3>
+           <span>Explanation</span>
+         </div>
+       </a>
+     </div>
+    </div>
+   </section>
+
+   <!-- Testimonials -->
+   <section id="testimonials" class="section">
+  <div class="section__container">
+   <h1>Testimonials</h1>
+   <h3>See what they say about me</h3>
+   <div class="testimonials">
+     <div class="testimonial">
+       <img
+         src="imgs/testimonial/people1.jpg"
+         alt="People"
+         class="testimonial__avatar"
+       />
+       <div class="testimonial__speech-bubble">
+         <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+           fuga libero nulla eveniet aperiam laborum, quis provident
+           quibusdam officiis reprehenderit, placeat neque perspiciatis vero
+           explicabo tempora, dignissimos accusantium inventore ducimus!
+         </p>
+         <p class="name"><a href="">Ellie</a> / Samsung</p>
+       </div>
+     </div>
+     <div class="testimonial">
+       <div class="testimonial__speech-bubble">
+         <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+           fuga libero nulla eveniet aperiam laborum, quis provident
+           quibusdam officiis reprehenderit, placeat neque perspiciatis vero
+           explicabo tempora, dignissimos accusantium inventore ducimus!
+         </p>
+         <p class="name"><a href="">Ellie</a> / Samsung</p>
+       </div>
+       <img
+       src="imgs/testimonial/people.jpeg"
+       alt="People"
+       class="testimonial__avatar"
+     />
+     </div>
+   </div>
+  </div>
+   </section>
+
+   <!-- Contact -->
+   <section id="contact" class="section">
+     <h1 class="contact__title">Let's talk</h1>
+     <h2 class="contact__email">ujin07150@gamil.com</h2>
+     <div class="contact__links">
+       <a href="https://github.com/yooj1n" target="_blank">
+         <i class="fab fa-github"></i>
+       </a>
+       <a href="#" target="_blank">
+         <i class="fa fa-linkedin-square"></i>
+       </a>
+     </div>
+     <p class="contact__rights">
+       2021 YOOJIN KIM - All rights reserved
+     </p>
+   </section>
+
+   <!-- Arrow up -->
+   <button class="arrow-up">
+     <i class="fas fa-arrow-up"></i>
+   </button>
 </body>
 </html>
