--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -375,5 +375,7 @@
     <button class="arrow-up">
       <i class="fas fa-arrow-up"></i>
     </button>
+
+  <script src="main.js" defer></script>
   </body>
 </html>
