--- a/Redux/vanilla-redux/public/index.html
+++ b/Redux/vanilla-redux/public/index.html
@@ -14,8 +14,11 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <button id="add">Add</button>
-    <span></span>
-    <button id="minus">Minus</button>
+    <h1>TO DOs</h1>
+    <form>
+      <input type="text" placeholder="Wirte to do" />
+      <button>ADD</button>
+    </form>
+    <ul></ul>
   </body>
 </html>
