--- a/Redux/vanilla-redux/public/index.html
+++ b/Redux/vanilla-redux/public/index.html
@@ -14,11 +14,6 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <h1>TO DOs</h1>
-    <form>
-      <input type="text" placeholder="Wirte to do" />
-      <button>ADD</button>
-    </form>
-    <ul></ul>
+    <div id="root"></div>
   </body>
 </html>
